# swade-tools

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: AppState.cpp  AppState.h  CMakeLists.txt  InputSanitizer.cpp  InputSanitizer.h  ReplApp.cpp  ReplApp.h  Stub.cpp  Stub.h  main.cpp
test/: CMakeLists.txt  catch.hpp  testmain.cpp
